# archeryutils

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  examples.ipynb  examples.py  go.mod  go.sum  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  codecov.yml
.github/workflows/: coverage.yaml  linting.yaml  pypi_release.yaml  testing.yaml
archerycls/: constants.py  rounds.py  targets.py
archerycls/round_data_files/: AGB.json  AGB_indoor.json  AGB_outdoor_imperial.json  AGB_outdoor_metric.json  WA.json  WA_indoor.json  WA_outdoor.json
archeryutils/: __init__.py  constants.py  convert.py  length.py  load_rounds.py  rounds.py  targets.py  utils.py
archeryutils/classifications/: AGB_ages.json  AGB_bowstyles.json  AGB_classes.json  AGB_classes_in.json  AGB_classes_out.json  AGB_data.py  AGB_genders.json  __init__.py  agb_field_classifications.py  agb_indoor_classifications.py  agb_old_field_classifications.py  agb_old_indoor_classifications.py  agb_old_outdoor_classifications.py  agb_outdoor_classifications.py  age_calculator.py  classification_utils.py  classifications.py
archeryutils/classifications/data/: AGB_classes_out.json
archeryutils/classifications/tests/: __init__.py  test_agb_field.py  test_agb_indoor.py  test_agb_old_field.py  test_agb_old_indoor.py  test_agb_old_outdoor.py  test_agb_outdoor.py  test_age_calculator.py  test_classification_utils.py
archeryutils/django/: fields.py  forms.py
archeryutils/handicaps/: __init__.py  handicap_equations.py  handicap_functions.py  handicap_scheme.py  handicap_scheme_aa.py  handicap_scheme_agb.py  handicap_tables.py  hc_sys_params.json
archeryutils/handicaps/tests/: __init__.py  test_handicap_tables.py  test_handicaps.py
archeryutils/round_data_files/: AA_field.json  AA_indoor.json  AA_outdoor_metric.json  AGB_VI.json  AGB_clout.json  AGB_indoor.json  AGB_outdoor_imperial.json  AGB_outdoor_metric.json  Custom.json  Miscellaneous.json  WA_VI.json  WA_clout.json  WA_experimental.json  WA_field.json  WA_indoor.json  WA_outdoor.json
archeryutils/tests/: test_age_calculator.py  test_constants.py  test_convert.py  test_length.py  test_rounds.py  test_targets.py
classifications/: data.go  field.go  field_test.go  indoor.go  indoor_test.go  jsonio.go  old_field.go  old_field_test.go  old_indoor.go  old_indoor_test.go  outdoor.go  outdoor_test.go  utils.go
classifications/data/: AGB_ages.json
cmd/example/: main.go
configs/: golangci.yaml
docs/: README.md  api.rst  archeryutils.classifications.rst  archeryutils.handicaps.rst  conf.py  index.rst
docs/api/: archeryutils.baseclasses.rst  archeryutils.classifications.rst  archeryutils.handicaps.rst  archeryutils.preloaded_rounds.rst  archeryutils.types.rst  index.rst
docs/community/: index.rst
docs/develop/: changelog.rst  contributing.rst  contributors.rst  index.rst  whats-new.rst
docs/getting-started/: index.rst  installation.rst  quickstart.rst
handicaps/: aa.go  agb.go  factory.go  handicap_equations.py  handicap_functions.py  handicaps_test.go  hc_sys_params.json  scheme.go  table.go
handicaps/data/: hc_sys_params.json
length/: length.go  length_test.go
paper/: paper.bib  paper.md
rounds/: data.go  rounds.go  rounds_test.go
rounds/data/: AGB_outdoor_imperial.json  IFAA_field.json
targets/: targets.go  targets_test.go
tests/regression/: __init__.py  test_classifications.py  test_handicaps.py
tests/regression/__snapshots__/: test_classifications.ambr  test_handicaps.ambr
tests/unit/: __init__.py  test_rounds.py  test_targets.py
tests/unit/classifications/: test_agb_data.py  test_agb_field.py  test_agb_indoor.py  test_agb_old_field.py  test_agb_old_indoor.py  test_agb_old_outdoor.py  test_agb_outdoor.py  test_age_calculator.py  test_classification_utils.py
tests/unit/handicaps/: test_handicap_tables.py  test_handicaps.py
ts/: package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
ts/src/: handicap-table.ts  handicaps.test.ts  handicaps.ts  index.ts  length.test.ts  length.ts  rounds.test.ts  rounds.ts  targets.test.ts  targets.ts
ts/src/classifications/: data.ts  field.test.ts  field.ts  indoor.test.ts  indoor.ts  jsonio.ts  old-field.test.ts  old-field.ts  old-indoor.test.ts  old-indoor.ts  outdoor.test.ts  outdoor.ts  utils.ts
