[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "archeryutils"
version = "0.1.1"
description = "A collection of archery utilities in python"
authors = [
  { name="Jack Atkinson", email="jack.atkinson1000@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Typing :: Typed',
    "Operating System :: OS Independent",
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
#    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-mock",
]
lint = [
    "black>=24.1.0",
    "jupyter-black",
    "pylint",
    "mypy>=1.0.0",
    "coverage",
    "pytest>=7.2.0",
    "pytest-mock",
    "pydocstyle",
    "ruff>=0.3.0",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-toolbox",
    "nbsphinx",
    "ipython",
    "pickleshare",  # https://github.com/ipython/ipython/issues/14237
    "black>=24.1.0",
    "ruff>=0.3.0",
    "blackdoc",
]

[project.urls]
"Homepage" = "https://github.com/jatkinson1000/archeryutils"
"Bug Tracker" = "https://github.com/jatkinson1000/archeryutils/Issues"

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

#[tool.setuptools.packages]
#find = {}
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["archeryutils", "archeryutils.*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["archeryutils.tests*", "examples.py"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
archeryutils = ["*.json", "round_data_files/*.json", "classifications/*.json"]

#[options.extras_require]
#tests = pytest

[tool.mypy]
warn_unused_configs = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.ruff]
# Run linting and formatting on notebooks
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules for full details of each ruleset.

# Enable:  D: `pydocstyle`, PL: `pylint`, I: `isort`, W: `pycodestyle whitespace`
#          NPY: `numpy`, FLY: `flynt`, RUF: `ruff`
#          From flake8: "ARG", "SLF", "S", "BLE", "B", "A", "C4", "EM", "ICN",
#                       "PIE", "Q", "RSE", "SIM", "TID"
select = ["D", "PL", "I", "E", "W", "NPY", "FLY", "RUF",
          "ARG", "SLF", "S", "BLE","B", "A", "C4", "EM", "ICN", "PIE", "Q", "RSE",
          "SIM", "TID"]

# Enable D417 (Missing argument description) on top of the NumPy convention.
extend-select = ["D417"]

# Ignore SIM108 (use ternary instead of if-else) as I think it can obscure intent.
# Ignore RUF002 (ambiguous characters) as it does not allow apostrophes in strings.
ignore = ["SIM108", "RUF002"]

[tool.ruff.lint.pydocstyle]
# Use NumPy convention for checking docstrings
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore S101 (use of assert) in tests
"**/tests/*" = ["S101"]
