[metadata]
name = archeryutils
version = 0.1.1
description = A collection of archery utilities in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jatkinson1000/archeryutils
author = Jack Atkinson
author_email = jack.atkinson1000@gmail.com
license = MIT
license_file = LICENSE
keywords = archery, AGB
classifiers =
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/jatkinson1000/archeryutils
    Tracker = https://github.com/jatkinson1000/archeryutils/Issues

[options]
packages = find:
include_package_data = True
install_requires =
    numpy ~= 1.20.3

[options.extras_require]
tests = pytest

[options.package_data]
* = *.json, round_data_files/*.json

[flake8]
max-line-length = 88
